# awesome-audit-log-django

./: .gitignore  .pre-commit-config.yaml  MIGRATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build & publish.yml  database-tests.yml  publish.yml  test-advanced.yml  test.yml
awesome_audit_log/: apps.py  conf.py  context.py  db.py  middleware.py  signals.py  utils.py
example/example/: __init__.py  celery.py  settings.py  tasks.py  urls.py  views.py
example/products/: admin.py  models.py
example/products/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_audit_basic.py  test_audit_mysql.py  test_audit_postgres.py  test_contextvar_no_context.py  test_http_context.py  test_settings.py
tests/config/: conftest.py  settings.py
tests/fixtures/testapp/: apps.py  models.py  urls.py  views.py
tests/integration/: test_audit_mysql.py  test_audit_postgres.py
tests/testapp/: apps.py  models.py  urls.py  views.py
tests/unit/: test_audit_basic.py  test_celery_integration.py  test_command_auditing.py  test_contextvar_no_context.py  test_http_context.py  test_migration_command.py  test_settings.py  test_timestamp_accuracy.py
